// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Small /> renders with Strong and Emphasis children 1`] = `
.emotion-0 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 12px;
  line-height: 1.5;
}

.emotion-1 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-weight: 800;
  line-height: 1.5;
}

.emotion-2 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-style: italic;
  font-weight: 400;
  line-height: 14px;
}

<small
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text 
  <strong
    class="emotion-1"
  >
    with strong
  </strong>
   and
   
  <em
    class="emotion-2"
  >
    emphasis text
  </em>
   included.
</small>
`;

exports[`<Small /> renders with a string 1`] = `
.emotion-0 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 12px;
  line-height: 1.5;
}

<small
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</small>
`;
